Update activity 3 & 17 to save data

--- a/app/src/main/res/layout/activity_seven_teen.xml
+++ b/app/src/main/res/layout/activity_seven_teen.xml
@@ -53,19 +53,79 @@
         android:id="@+id/imageView17"
         android:layout_width="380dp"
         android:layout_height="100dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
         app:srcCompat="@drawable/assets_seventeen_box2" />
 
+    <EditText
+        android:id="@+id/edt_tigahal"
+        android:layout_width="360dp"
+        android:layout_height="95dp"
+        android:backgroundTint="#000000"
+        android:gravity="top|start"
+        android:hint="Tuliskan jawabanmu disini!"
+        android:inputType="textMultiLine"
+        android:lines="8"
+        android:maxLines="10"
+        android:minLines="6"
+        android:scrollbars="vertical"
+        android:textColorHint="#737373"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+
+    <EditText
+        android:id="@+id/edt_duatemuan"
+        android:layout_width="360dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint= "#000000"
+        android:gravity="top|start"
+        android:inputType="textMultiLine"
+        android:lines="8"
+        android:maxLines="10"
+        android:minLines="6"
+        android:scrollbars="vertical"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:hint="Tuliskan jawabanmu disini!"
+        android:textColorHint="#737373"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+
+    <EditText
+        android:id="@+id/edt_satupertanyaan"
+        android:layout_width="360dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint= "#000000"
+        android:gravity="top|start"
+        android:inputType="textMultiLine"
+        android:lines="8"
+        android:maxLines="10"
+        android:minLines="6"
+        android:scrollbars="vertical"
+        android:textSize="14sp"
+        android:textColor="@color/black"
+        android:hint="Tuliskan jawabanmu disini!"
+        android:textColorHint="#737373"
+        app:layout_constraintEnd_toEndOf="@+id/imageView17"
+        app:layout_constraintStart_toStartOf="@+id/imageView17"
+        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
     <ImageView
         android:id="@+id/btn_next"
-        android:background="@drawable/button"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/button"
         android:src="@drawable/assets_btn_nextprev"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
