--- a/app/src/main/res/layout/activity_six.xml
+++ b/app/src/main/res/layout/activity_six.xml
@@ -12,6 +12,7 @@
         style="@style/TextTitleCupCakes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/capaian_pembelajaran"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,14 +25,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/content_cp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_title"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <ImageView
         android:id="@+id/img_cp"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
         android:layout_marginTop="24dp"
         android:src="@drawable/assets_six_cp"
         app:layout_constraintEnd_toEndOf="@+id/tv_content_cp"
