--- a/app/src/main/res/layout/activity_eighteen.xml
+++ b/app/src/main/res/layout/activity_eighteen.xml
@@ -19,34 +19,40 @@
 
     <ImageView
         android:id="@+id/imageView18"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="310dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/assets_eighteen_textbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:srcCompat="@drawable/assets_eighteen_textbox" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/sometimelater"
+        android:gravity="center"
         android:text="perasaanku setelah mempelajari materi pada modul ini"
         android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/imageView18"
         app:layout_constraintStart_toStartOf="@+id/imageView18"
         app:layout_constraintTop_toTopOf="@+id/imageView18" />
 
     <TextView
         android:id="@+id/textView17"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/sometimelater"
         android:text="Jika sudah menuliskannya silahkan untuk mempresentasikannya di depan guru dan teman-temanmu!"
         android:textColor="#000000"
+        app:layout_constraintEnd_toEndOf="@+id/imageView18"
         app:layout_constraintStart_toStartOf="@+id/imageView18"
         app:layout_constraintTop_toBottomOf="@+id/imageView18" />
 
