--- a/app/src/main/res/layout/activity_nine.xml
+++ b/app/src/main/res/layout/activity_nine.xml
@@ -10,11 +10,13 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tv_title"
             style="@style/TextTitleSomeTimeLater"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:text="@string/kegiatan_ekonomi"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,20 +43,6 @@
             app:layout_constraintStart_toEndOf="@+id/img_guru"
             app:layout_constraintTop_toTopOf="@+id/img_guru" />
 
-        <TextView
-            android:id="@+id/tv_guru_one"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="16dp"
-            style="@style/TextStyleSingle"
-            android:textSize="17sp"
-            android:text="@string/conv_nine_guru_1"
-            app:layout_constraintBottom_toBottomOf="@+id/img_bublechat"
-            app:layout_constraintEnd_toEndOf="@+id/img_bublechat"
-            app:layout_constraintStart_toStartOf="@+id/img_bublechat"
-            app:layout_constraintTop_toTopOf="@+id/img_bublechat" />
-
         <ImageView
             android:id="@+id/img_siswa"
             android:layout_width="80dp"
@@ -70,25 +58,11 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
-            android:src="@drawable/assets_nine_bublechatright"
+            android:src="@drawable/assets_nine_bublechat2"
             app:layout_constraintBottom_toBottomOf="@+id/img_siswa"
             app:layout_constraintEnd_toStartOf="@+id/img_siswa"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/img_siswa" />
-
-        <TextView
-            android:id="@+id/tv_siswa_one"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="24dp"
-            style="@style/TextStyleSingle"
-            android:textSize="17sp"
-            android:text="@string/nine_siswa_one"
-            app:layout_constraintBottom_toBottomOf="@+id/img_bublechatright"
-            app:layout_constraintEnd_toEndOf="@+id/img_bublechatright"
-            app:layout_constraintStart_toStartOf="@+id/img_bublechatright"
-            app:layout_constraintTop_toTopOf="@+id/img_bublechatright" />
 
         <ImageView
             android:id="@+id/img_guru_two"
@@ -105,25 +79,11 @@
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/assets_nine_bublechat"
+            android:src="@drawable/assets_nine_bublechat3"
             app:layout_constraintBottom_toBottomOf="@+id/img_guru_two"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img_guru_two"
             app:layout_constraintTop_toTopOf="@+id/img_guru_two" />
-
-        <TextView
-            android:id="@+id/tv_guru_two"
-            style="@style/TextStyleSingle"
-            android:textSize="16sp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="17dp"
-            android:text="@string/nine_guru_two"
-            app:layout_constraintBottom_toBottomOf="@+id/img_bublechat_two"
-            app:layout_constraintEnd_toEndOf="@+id/img_bublechat_two"
-            app:layout_constraintStart_toStartOf="@+id/img_bublechat_two"
-            app:layout_constraintTop_toTopOf="@+id/img_bublechat_two" />
 
         <ImageView
             android:id="@+id/img_pengertian"
