--- a/app/src/main/res/layout/activity_sixteen.xml
+++ b/app/src/main/res/layout/activity_sixteen.xml
@@ -19,9 +19,11 @@
 
     <ImageView
         android:id="@+id/imageView16"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="340dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView15"
@@ -31,9 +33,9 @@
         android:id="@+id/imageView14"
         android:layout_width="320dp"
         android:layout_height="120dp"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="-25dp"
         app:layout_constraintStart_toStartOf="@+id/imageView16"
-        app:layout_constraintTop_toTopOf="@+id/imageView16"
+        app:layout_constraintTop_toBottomOf="@+id/imageView16"
         app:srcCompat="@drawable/aseets_fifteen_bgtext" />
 
     <ImageView
