--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/img_cover"
         android:layout_width="320dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginTop="16dp"
         android:src="@drawable/assets_two_title"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,11 +27,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_cover" />
 
+
     <ImageView
         android:id="@+id/img_cloud1"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-50dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="-20dp"
         android:layout_marginEnd="-80dp"
         android:src="@drawable/assets_two_cloud"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +41,9 @@
     <ImageView
         android:id="@+id/img_cloud2"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="-55dp"
-        android:layout_marginTop="-8dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="-90dp"
+        android:layout_marginTop="48dp"
         android:src="@drawable/assets_two_cloud"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/line1" />
@@ -59,13 +60,19 @@
 
     <ImageView
         android:id="@+id/img_titlemateri2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/assets_two_titlemateri"
         app:layout_constraintBottom_toBottomOf="@+id/img_titlemateri1"
         app:layout_constraintEnd_toEndOf="@+id/img_titlemateri1"
         app:layout_constraintStart_toStartOf="@+id/img_titlemateri1"
         app:layout_constraintTop_toTopOf="@+id/img_titlemateri1" />
+
+
 
     <ImageView
         android:id="@+id/img_siswa"
@@ -120,7 +127,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/img_guru"
         app:layout_constraintTop_toBottomOf="@+id/img_segitiga" />
-
     <ImageView
         android:id="@+id/btn_next"
         android:background="@drawable/button"
