--- a/app/src/main/res/layout/activity_eighteen.xml
+++ b/app/src/main/res/layout/activity_eighteen.xml
@@ -24,17 +24,39 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/assets_eighteen_textbox"
+        android:src="@drawable/bg_refleksi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <EditText
+        android:id="@+id/edt_refleksi321"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#000000"
+        android:gravity="top|start"
+        android:hint="Tuliskan jawabanmu disini!"
+        android:inputType="textMultiLine"
+        android:lines="15"
+        android:scrollbars="vertical"
+        android:textColor="@color/black"
+        android:textColorHint="#737373"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
+        app:layout_constraintEnd_toEndOf="@+id/imageView18"
+        app:layout_constraintStart_toStartOf="@+id/imageView18"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/sometimelater"
         android:gravity="center"
